# Herald-of-Code

./: .gitignore  README.md  channels.py  coding tourney concept.md  files.py  herald.py  main.py  modals.py  problem_handler.py  pyproject.toml  requirements.txt  scheduling.py
player_files/: maybe.txt
problems/: test_problem.toml
src/: channels.py  herald.py
