[tool.poetry]
name = "Herald of Code"
version = "0.1.0"
description = "A Discord Bot for setting up your own Advent of Code styled events!"
authors = ["AlexBlandin"]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.0.0"
pytomlpp = "^1.0.10"
pendulum = "^2.1.2"
# schedule = "^1.1.0"
# pytz = "^2022.4"

[tool.poetry.group.dev.dependencies]
pylint = "^2.14.5"
yapf = "^0.32.0"
isort = "^5.10.1"
pyupgrade = "^2.37.3"
ruff = "^0.0.236"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F"]
# ignore = ["E501"] # E501 (line length  violations)
unfixable = ["B", "SIM", "TRY", "RUF"]
line-length = 120
target-version = "py39"

[tool.yapf]
based_on_style = "pep8"
indent_width = 2
continuation_indent_width = 2
column_limit = 120
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 1
coalesce_brackets = true
dedent_closing_brackets = true
indent_dictionary_value = true
indent_blank_lines = true
space_between_ending_comma_and_closing_bracket = true
spaces_around_default_or_named_assign = true
spaces_before_comment = 1

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 120
from_first = true
indent = "  "
