[tool.poetry]
name = "Herald of Code"
version = "0.1.0"
description = "A Discord Bot for setting up your own Advent of Code styled events!"
authors = ["AlexBlandin"]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.0.0"
pytomlpp = "^1.0.10"
pendulum = "^2.1.2"
# schedule = "^1.1.0"
# pytz = "^2022.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 2
format.line-ending = "lf"
target-version = "py310"
line-length = 160
preview = true

[tool.ruff.lint]
select = ["F", "E", "W", "N", "UP", "B", "SIM", "PD", "PL", "TRY", "FLY", "NPY", "PERF", "FURB", "RUF"]
ignore = ["N803", "N806", "E111", "E114", "Q", "W293", "E261", "PLR2004", "PLR0912"]

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 160
from_first = true
indent = "  "
