[tool.poetry]
name = "Herald of Code"
version = "0.1.0"
description = "A Discord Bot for setting up your own Advent of Code styled events!"
authors = ["AlexBlandin"]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.0.0"
pytomlpp = "^1.0.10"
pendulum = "^2.1.2"
# schedule = "^1.1.0"
# pytz = "^2022.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 2
target-version = "py310"
line-length = 160
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY", "TD003", "S311", "T201", "ANN401", "PLR2004", "W191", "E111", "E114", "E117", "E203", "D206", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "ISC001", "ISC002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 160
from_first = true
indent = "  "
